--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,20 @@
 altgraph==0.17.4
 Babel==2.14.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
 colorama==0.4.6
 Colr==0.9.1
 darkdetect==0.8.0
+idna==3.6
 kdtree==0.16
 packaging==23.2
 pefile==2023.2.7
 pillow==10.2.0
 pyinstaller==6.4.0
 pyinstaller-hooks-contrib==2024.2
+pywin32==306
 pywin32-ctypes==0.2.2
+requests==2.31.0
 setuptools==69.1.1
 tkcalendar==1.6.1
+urllib3==2.2.1
